--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <title>My Portfolio</title>
-</head>
-<body>
-  <h1>Hello! This is my website 💜</h1>
-  <p>Made using GitHub Pages.</p>
-</body>
-</html>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>My Portfolio</title>
+<style>
+:root {
+--lavender: #c7b7f2;
+--lavender-dark: #a493d6;
+--text-dark: #2b2b2b;
+--bg-light: #faf8ff;
+}
+
+
+body {
+margin: 0;
+font-family: 'Poppins', sans-serif;
+background: var(--bg-light);
+color: var(--text-dark);
+}
+
+
+header {
+background: var(--lavender);
+padding: 20px 40px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+
+header h1 {
+margin: 0;
+font-size: 28px;
+}
+
+
+nav a {
+margin: 0 15px;
+text-decoration: none;
+font-weight: 500;
+color: #fff;
+}
+
+
+.hero {
+text-align: center;
+padding: 100px 20px;
+}
+
+
+.hero h2 {
+font-size: 48px;
+margin: 0;
+}
+
+
+.hero p {
+font-size: 20px;
+margin-top: 10px;
+}
+
+
+.btn {
+background: var(--lavender-dark);
+padding: 12px 24px;
+color: #fff;
+border-radius: 8px;
+text-decoration: none;
+font-weight: 600;
+display: inline-block;
+margin-top: 20px;
+}
+
+
+.section {
+padding: 60px 40px;
+}
+
+
+.projects {
+display: grid;
