--- a/index.html
+++ b/index.html
@@ -1,84 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>My Portfolio</title>
-<style>
-:root {
---lavender: #c7b7f2;
---lavender-dark: #a493d6;
---text-dark: #2b2b2b;
---bg-light: #faf8ff;
-}
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio</title>
+    <style>
+        :root {
+            --lavender: #c7b7f2;
+            --lavender-dark: #a493d6;
+            --text-dark: #2b2b2b;
+            --bg-light: #faf8ff;
+        }
 
+        body {
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            background: var(--bg-light);
+            color: var(--text-dark);
+        }
 
-body {
-margin: 0;
-font-family: 'Poppins', sans-serif;
-background: var(--bg-light);
-color: var(--text-dark);
-}
+        header {
+            background: var(--lavender);
+            padding: 20px 40px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
 
+        header h1 {
+            margin: 0;
+            font-size: 28px;
+        }
 
-header {
-background: var(--lavender);
-padding: 20px 40px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-}
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: 500;
+            color: #fff;
+        }
 
+        .hero {
+            text-align: center;
+            padding: 100px 20px;
+        }
 
-header h1 {
-margin: 0;
-font-size: 28px;
-}
+        .hero h2 {
+            font-size: 48px;
+            margin: 0;
+        }
 
+        .hero p {
+            font-size: 20px;
+            margin-top: 10px;
+        }
 
-nav a {
-margin: 0 15px;
-text-decoration: none;
-font-weight: 500;
-color: #fff;
-}
+        .btn {
+            background: var(--lavender-dark);
+            padding: 12px 24px;
+            color: #fff;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: 600;
+            display: inline-block;
+            margin-top: 20px;
+        }
 
+        .section {
+            padding: 60px 40px;
+        }
 
-.hero {
-text-align: center;
-padding: 100px 20px;
-}
+        .projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 25px;
+        }
 
+        .card {
+            background: #fff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
 
-.hero h2 {
-font-size: 48px;
-margin: 0;
-}
+        .card h3 {
+            margin-top: 0;
+        }
 
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: var(--lavender);
+            color: #fff;
+            margin-top: 40px;
+        }
+    </style>
+</head>
+<body>
 
-.hero p {
-font-size: 20px;
-margin-top: 10px;
-}
+<header>
+    <h1>My Portfolio</h1>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
 
+<section class="hero" id="home">
+    <h2>Hello, I'm Kat ✨</h2>
+    <p>Front-End Developer | Creative Designer | Freelancer</p>
+    <a href="#projects" class="btn">View My Work</a>
+</section>
 
-.btn {
-background: var(--lavender-dark);
-padding: 12px 24px;
-color: #fff;
-border-radius: 8px;
-text-decoration: none;
-font-weight: 600;
-display: inline-block;
-margin-top: 20px;
-}
+<section class="section" id="projects">
+    <h2>Projects</h2>
+    <div class="projects">
+        <div class="card">
+            <h3>Project One</h3>
+            <p>Short description of your project.</p>
+        </div>
+        <div class="card">
+            <h3>Project Two</h3>
+            <p>Short description of your project.</p>
+        </div>
+        <div class="card">
+            <h3>Project Three</h3>
+            <p>Short description of your project.</p>
+        </div>
+    </div>
+</section>
 
+<footer id="contact">
+    <p>Contact me at: yourname@email.com</p>
+</footer>
 
-.section {
-padding: 60px 40px;
-}
-
-
-.projects {
-display: grid;
+</body>
+</html>
