--- a/index.html
+++ b/index.html
@@ -1,151 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <style>
-        :root {
-            --lavender: #c7b7f2;
-            --lavender-dark: #a493d6;
-            --text-dark: #2b2b2b;
-            --bg-light: #faf8ff;
-        }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>My Portfolio</title>
+<style>
+:root {
+--lavender: #c7b7f2;
+--lavender-dark: #a493d6;
+--text-dark: #2b2b2b;
+--bg-light: #faf8ff;
+}
 
-        body {
-            margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background: var(--bg-light);
-            color: var(--text-dark);
-        }
 
-        header {
-            background: var(--lavender);
-            padding: 20px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        }
+body {
+margin: 0;
+font-family: 'Poppins', sans-serif;
+background: var(--bg-light);
+color: var(--text-dark);
+}
 
-        header h1 {
-            margin: 0;
-            font-size: 28px;
-        }
 
-        nav {
-            display: flex;
-            gap: 15px;
-        }
+header {
+background: var(--lavender);
+padding: 20px 40px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
 
-        nav a {
-            text-decoration: none;
-            font-weight: 500;
-            color: #fff;
-            padding: 8px 16px;
-            border-radius: 8px;
-            transition: background 0.3s;
-        }
 
-        nav a:hover {
-            background: var(--lavender-dark);
-        }
+header h1 {
+margin: 0;
+font-size: 28px;
+}
 
-        .hero, .about, .skills, .projects, .contact {
-            padding: 60px 40px;
-        }
 
-        .hero {
-            text-align: center;
-        }
+nav {
+display: flex;
+gap: 15px;
+}
 
-        .hero h2, .about h2, .skills h2, .projects h2 {
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
 
-        .hero p, .about p, .skills p {
-            font-size: 18px;
-        }
+nav a {
+text-decoration: none;
+font-weight: 500;
+color: #fff;
+padding: 8px 16px;
+border-radius: 8px;
+transition: background 0.3s;
+}
 
-        .skills-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-        }
 
-        .skill {
-            background: var(--lavender);
-            padding: 10px 20px;
-            border-radius: 20px;
-            color: #fff;
-            font-weight: 500;
-        }
+nav a:hover {
+background: var(--lavender-dark);
+}
 
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 25px;
-        }
 
-        .card {
-            background: #fff;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
+.hero, .about, .skills, .projects, .contact {
+padding: 60px 40px;
+}
 
-        .card h3 {
-            margin-top: 0;
-        }
 
-        .contact {
-            background: var(--lavender);
-            color: #fff;
-            border-radius: 12px;
-            text-align: center;
-            padding: 20px;
-        }
+.hero {
+text-align: center;
+}
 
-        footer {
-            text-align: center;
-            padding: 10px;
-            color: #fff;
-            margin-top: 20px;
-        }
-    </style>
-</head>
-<body>
 
-<header>
-    <h1>My Portfolio</h1>
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact Me</a>
-    </nav>
-</header>
+.hero h2, .about h2, .skills h2, .projects h2 {
+font-size: 36px;
+margin-bottom: 20px;
+}
 
-<section class="about" id="about">
-    <h2>About Me</h2>
-    <p>Hello! I'm Kat, a Front-End Developer and Creative Designer passionate about building modern and aesthetic web experiences.</p>
-</section>
 
-<section class="skills" id="skills">
-    <h2>Skills</h2>
-    <div class="skills-list">
-        <span class="skill">HTML</span>
-        <span class="skill">CSS</span>
-        <span class="skill">JavaScript</span>
-        <span class="skill">React</span>
-        <span class="skill">UI/UX Design</span>
-    </div>
-</section>
+.hero p, .about p, .skills p {
+font-size: 18px;
+}
 
-<section class="projects" id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-        <div class="card">
-            <h3>Project One</h3>
-            <p>Short
+
+.skills-list {
+display: flex;
+flex-wrap: wrap;
+gap: 15px;
+}
+
+
+.skill {
+background: var(--lavender);
+</html>
