--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Portfolio</title>
 <style>
 :root {
@@ -21,12 +21,13 @@ color: var(--text-dark);
 }
 
 
+/* Header */
 header {
-background: var(--lavender);
-padding: 20px 40px;
 display: flex;
 justify-content: space-between;
 align-items: center;
+background: var(--lavender);
+padding: 20px 40px;
 box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 
@@ -34,12 +35,7 @@ box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 header h1 {
 margin: 0;
 font-size: 28px;
-}
-
-
-nav {
-display: flex;
-gap: 15px;
+color: #fff;
 }
 
 
@@ -47,6 +43,7 @@ nav a {
 text-decoration: none;
 font-weight: 500;
 color: #fff;
+margin-left: 20px;
 padding: 8px 16px;
 border-radius: 8px;
 transition: background 0.3s;
@@ -58,34 +55,40 @@ background: var(--lavender-dark);
 }
 
 
-.hero, .about, .skills, .projects, .contact {
+/* Main Content */
+.main-content {
+display: flex;
+justify-content: space-between;
 padding: 60px 40px;
 }
 
 
-.hero {
-text-align: center;
+.left-column, .middle-column, .right-column {
+width: 30%;
 }
 
 
-.hero h2, .about h2, .skills h2, .projects h2 {
-font-size: 36px;
+.left-column img {
+width: 100%;
+border-radius: 12px;
 margin-bottom: 20px;
 }
 
 
-.hero p, .about p, .skills p {
-font-size: 18px;
+.middle-column a {
+display: block;
+margin-bottom: 10px;
+text-decoration: none;
+color: var(--text-dark);
+font-weight: 500;
 }
 
 
-.skills-list {
-display: flex;
-flex-wrap: wrap;
-gap: 15px;
+.middle-column a:hover {
+color: var(--lavender-dark);
 }
 
 
-.skill {
-background: var(--lavender);
+.right-column a {
+display: block;
 </html>
