Update title and restructure HTML layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Portfolio</title>
+<title>About Me - Katrina Joy Gonzalvo</title>
 <style>
 :root {
 --lavender: #c7b7f2;
@@ -21,7 +21,6 @@ color: var(--text-dark);
 }
 
 
-/* Header */
 header {
 display: flex;
 justify-content: space-between;
@@ -55,40 +54,35 @@ background: var(--lavender-dark);
 }
 
 
-/* Main Content */
-.main-content {
-display: flex;
-justify-content: space-between;
+main {
 padding: 60px 40px;
 }
 
 
-.left-column, .middle-column, .right-column {
-width: 30%;
-}
-
-
-.left-column img {
-width: 100%;
-border-radius: 12px;
+main h2 {
+font-size: 36px;
 margin-bottom: 20px;
 }
 
 
-.middle-column a {
-display: block;
-margin-bottom: 10px;
-text-decoration: none;
-color: var(--text-dark);
-font-weight: 500;
+main p {
+font-size: 18px;
+line-height: 1.6;
 }
 
 
-.middle-column a:hover {
-color: var(--lavender-dark);
+footer {
+text-align: center;
+padding: 10px;
+color: #fff;
+margin-top: 40px;
+background: var(--lavender);
 }
+</style>
+</head>
+<body>
 
 
-.right-column a {
-display: block;
+<header>
+<h1>My Portfolio</h1>
 </html>
