--- a/index.html
+++ b/index.html
@@ -1,88 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About Me - Katrina Joy Gonzalvo</title>
-<style>
-:root {
---lavender: #c7b7f2;
---lavender-dark: #a493d6;
---text-dark: #2b2b2b;
---bg-light: #faf8ff;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PAGE_TITLE - Katrina Joy Gonzalvo</title>
+  <style>
+    :root {
+      --lavender: #c7b7f2;
+      --lavender-dark: #a493d6;
+      --text-dark: #2b2b2b;
+      --bg-light: #faf8ff;
+    }
 
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: var(--bg-light);
+      color: var(--text-dark);
+    }
 
-body {
-margin: 0;
-font-family: 'Poppins', sans-serif;
-background: var(--bg-light);
-color: var(--text-dark);
-}
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: var(--lavender);
+      padding: 20px 40px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
 
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+      color: #fff;
+    }
 
-header {
-display: flex;
-justify-content: space-between;
-align-items: center;
-background: var(--lavender);
-padding: 20px 40px;
-box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-}
+    nav a {
+      text-decoration: none;
+      font-weight: 500;
+      color: #fff;
+      margin-left: 20px;
+      padding: 8px 16px;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
 
+    nav a:hover {
+      background: var(--lavender-dark);
+    }
 
-header h1 {
-margin: 0;
-font-size: 28px;
-color: #fff;
-}
+    main {
+      padding: 60px 40px;
+    }
 
+    footer {
+      text-align: center;
+      padding: 10px;
+      color: #fff;
+      margin-top: 40px;
+      background: var(--lavender);
+    }
 
-nav a {
-text-decoration: none;
-font-weight: 500;
-color: #fff;
-margin-left: 20px;
-padding: 8px 16px;
-border-radius: 8px;
-transition: background 0.3s;
-}
+    /* Extra Styles for Skills & Projects & Contact */
+    .skills-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
 
+    .skills-list li {
+      background: var(--lavender);
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 8px;
+      list-style: none;
+    }
 
-nav a:hover {
-background: var(--lavender-dark);
-}
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+    }
 
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
 
-main {
-padding: 60px 40px;
-}
+    .contact-box {
+      background: var(--lavender);
+      color: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      max-width: 500px;
+      margin: 0 auto;
+      text-align: center;
+    }
 
-
-main h2 {
-font-size: 36px;
-margin-bottom: 20px;
-}
-
-
-main p {
-font-size: 18px;
-line-height: 1.6;
-}
-
-
-footer {
-text-align: center;
-padding: 10px;
-color: #fff;
-margin-top: 40px;
-background: var(--lavender);
-}
-</style>
+    .contact-box a {
+      color: #fff;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 
+  <header>
+    <h1>My Portfolio</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="skills.html">Skills</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact Me</a>
+    </nav>
+  </header>
 
-<header>
-<h1>My Portfolio</h1>
+  <main>
+    <!-- PAGE SPECIFIC CONTENT DITO -->
+  </main>
+
+  <footer>
+    <p>© 2025 Katrina Joy Gonzalvo. All rights reserved.</p>
+  </footer>
+
+</body>
 </html>
