Insert profile image in portfolio main section
Added a profile image to the portfolio page.

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
   </header>
 
   <main>
-    <h2>Welcome to My Portfolio!</h2>
-    <p>Hello! I am Katrina Joy Gonzalvo. Explore my projects, skills, and contact information using the links above.</p>
-  </main>
+  <h2>Welcome to My Portfolio!</h2>
+  <img src="profile.jpg" alt="Katrina Joy Gonzalvo" style="width:200px; border-radius:50%; margin-bottom:20px;">
+  <p>Hello! I am Katrina Joy Gonzalvo. Explore my projects, skills, and contact information using the links above.</p>
+</main>
 
   <footer>
     <p>© 2025 Katrina Joy Gonzalvo. All rights reserved.</p>
